--- a/style.css
+++ b/style.css
@@ -5,134 +5,11 @@ body {
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-main {
-    background-color: white;
+header {
+    grid-area: header;
 }
 
-h2 {
-    color: #590242;
-}
-
-#mainTitle {
-    font-variant: small-caps;
-}
-
-#pageInfo {
-    background: linear-gradient(to right,#2104d9,black);
-}
-
-/* Trending Songs */
-
-#trending {
-    width: 375px;
-    display: flex;
-    overflow: scroll;
-}
-
-#trending section {
-    position: relative;
-    color: #590242;
-}
-
-audio {
-    position: absolute;
-    bottom: 225px;
-    right: 5px;
-    opacity: 80%;
-}
-
-/* Your playlists */
-
-#yourPlaylists {
-    background-color: #2699fb;
-    display: flex;
-    overflow: scroll;
-}
-
-#curatedPlaylists {
-    background-color: #030a8c;
-    display: flex;
-    overflow: scroll;
-}
-
-#best2020, #pumpkinSpice, #quietStorm, #smoothJazz, #smoothStudy, #boozyBrunch, #dinnerParty, #mellow, #jazzChill, #jazzSax {
-    margin: 10px;
-    padding: 5px;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#best2020, #pumpkinSpice, #quietStorm, #smoothJazz, #smoothStudy {
-    background-color: #0d8dfb;
-}
-
-#boozyBrunch, #dinnerParty, #mellow, #jazzChill, #jazzSax {
-    background-color: #020873;
-}
-
-#button {
-    width: 100px;
-    background-color: #590242;
-    padding: 10px;
-    color: white;
-    text-align: center;
-}
-
-a {
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-decoration: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* nav */
 ul {
     overflow: hidden;
     max-height: 0;
@@ -187,9 +64,124 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
     top: 0;
 }
 
+/* pageinfo div */
+
+#pageInfo {
+    grid-area: pageInfo;
+}
+
+/* main content */
+main {
+    background-color: white;
+}
+
+h2 {
+    color: #590242;
+}
+
+#mainTitle {
+    font-variant: small-caps;
+}
+
+#pageInfo {
+    background: linear-gradient(to right,#2104d9,black);
+}
+
+/* Trending Songs */
+
+#trending {
+    width: 375px;
+    display: flex;
+    overflow: scroll;
+}
+
+#trending section {
+    position: relative;
+    color: #590242;
+}
+
+audio {
+    position: absolute;
+    bottom: 225px;
+    right: 5px;
+    opacity: 80%;
+}
+
+/* Your playlists */
+
+#yourPlaylists {
+    background-color: #2699fb;
+    display: flex;
+    overflow: scroll;
+}
+
+#curatedPlaylists {
+    background-color: #030a8c;
+    display: flex;
+    overflow: scroll;
+}
+
+#best2020, #pumpkinSpice, #quietStorm, #smoothJazz, #smoothStudy, #boozyBrunch, #dinnerParty, #mellow, #jazzChill, #jazzSax {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#best2020, #pumpkinSpice, #quietStorm, #smoothJazz, #smoothStudy {
+    background-color: #0d8dfb;
+}
+
+#boozyBrunch, #dinnerParty, #mellow, #jazzChill, #jazzSax {
+    background-color: #020873;
+}
+
+#button {
+    width: 150px;
+    margin-left: 25px;
+    background-color: #590242;
+    padding: 10px;
+    color: white;
+    text-align: center;
+}
+
+a {
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
+}
+
+/* Scrolling Bar CSS */
+
+/* Footer */
+
+footer {
+    grid-area: footer;
+    padding: 25px;
+    text-align: center;
+    background-color: #ffffff;
+    color: #590242;
+}
+
 @media screen and (min-width:834px) {
     body {
         width : 834px;
+        display: grid;
+        grid-template-areas: 
+        "header header"
+        "pageInfo pageInfo"
+        "main main"
+        "footer footer"
+        ;
+    }
+
+    main {
+        display: grid;
+        grid-template-rows: auto 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 
     #trending {
@@ -206,4 +198,5 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
     label span, input {
         display: none;
     }
+
 }
